# Python-projects-Crypto-tracker-app

./: currency.py  database (copy).db  database.db  graph.py  main (copy).py  main.py  pfunctions.py  pyproject.toml  unittests.py
static/: javascript.js  style.css
templates/: base.html  create (copy).html  create.html  currency.html  delete_page.html  edit.html  graph.html  index (copy).html  index.html
